--- a/style.css
+++ b/style.css
@@ -53,8 +53,9 @@ main {
 /*
 ヘッダー
 */
-header {
-	background: #F5F5F5;
+header,
+body {
+	background: #F7FBFF;
 }
 
 header > div {
@@ -62,6 +63,43 @@ header > div {
 	box-sizing: border-box;
 	max-width: 1280px;
 	margin: 0 auto;
+}
+
+header > div {
+	max-width: 1280px;
+}
+
+header > div .global_nav_wrapper {
+	max-width: 1080px;
+} 
+header > div .site_name_wrapper .site_name img,
+header > div .site_name_wrapper .site_name span {
+	vertical-align: middle;
+}
+
+header > div .contact {
+	text-decoration: none;
+}
+
+header > div .site_name_wrapper .site_name {
+	text-decoration: none;
+	color: #000;
+	transition: all .25s;
+}
+
+header div > .site_name_wrapper .site_name:hover {
+	opacity: .5;
+}
+
+header > div .contact {
+	background-color: #065187;
+	color: #fff;
+	padding: 8px;
+	border-bottom-left-radius: 16px;
+	border-bottom-right-radius: 16px;
+	top: 0;
+	right: 0;
+	position: fixed;
 }
 
 header .global_nav,
@@ -80,6 +118,10 @@ header .hamburger_icon {
 
 header .hamburger_icon::before {
 	top: 10px;
+}
+
+header .hamburger_nav > * {
+	display: block;
 }
 
 header .site_name {
@@ -102,30 +144,14 @@ header .site_name .logo-large {
 }
 
 @media screen and (min-width: 500px) {
-	header .hamburger_icon,
-	header .hamburger_menu {
+	header .hamburger_nav,
+	header .hamburger_icon {
 		display: none;
 	}
-
+	
 	header .global_nav,
 	header .aside_nav {
 		display: block;
-	}
-
-	header .aside_nav {
-		background: #B5946D;
-		position: fixed;
-		top: 0;
-		right: 0;
-		border-bottom-left-radius: 8px;
-		padding: 8px;
-		margin: 0;
-		list-style: none;
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		font-size: 14px;
-		z-index: 100;
 	}
 
 	header .aside_nav li:not(:last-child) {
@@ -134,7 +160,6 @@ header .site_name .logo-large {
 
 	header .aside_nav a {
 		color: #FFF;
-		text-decoration: none;
 		position: relative;
 		z-index: 40;
 	}
@@ -159,19 +184,6 @@ header .site_name .logo-large {
 	header .aside_nav > * {
 		padding: 0 16px;
 	}
-
-	/*header .aside_nav .sns_link {
-			padding-right: 0;
-	}
-
-	header .aside_nav .sns_link a {
-			margin: 0 8px;
-	}
-
-	header .aside_nav .sns_icon {
-			width: 32px;
-			border-radius: 8px;
-	}*/
 
 	header .global_nav {
 		padding-top: 20px;
@@ -209,10 +221,6 @@ header .site_name .logo-large {
 
 	header .site_name {
 		font-size: 18px;
-	}
-
-	header .site_name .logo-small {
-		display: none;
 	}
 
 	header .site_name .logo-large {
