--- a/hamburger.css
+++ b/hamburger.css
@@ -16,21 +16,6 @@
     z-index: 10000;
 }
 
-@media (min-width:680px) {
-    .hamburger_icon {
-        display: none;
-    }
-}
-
-.hamburger_icon .lines {
-    width: 100%;
-    height: 3px;
-    background: #CB2E27;
-    border-radius: 4px;
-    position: absolute;
-    transition: all .5s;
-}
-
 /****************
 アクティブ化
 */
@@ -50,6 +35,7 @@
     overflow: visible;
     transition: all .5s;
     background: white;
+    visibility: hidden;
 }
 
 .hamburger_nav .menu_wrapper {
@@ -107,4 +93,5 @@
     left: 0;
     opacity: 1;
     background-color: #f5f1ed;
+    visibility: visible;
 }
