ボタン作成

--- a/style.css
+++ b/style.css
@@ -261,7 +261,12 @@ header .site_name .logo-large {
 	margin-bottom: 0;
 	padding-bottom: 32px;
 }
-.btu{
+.btu {
+	position: relative;
+	right: 32px;
+	top: 0px;
+	bottom: 0px;
+	margin: auto;
 	display: block;
 	width: 86%;
 	max-width: 440px;
@@ -277,17 +282,19 @@ header .site_name .logo-large {
 	border-radius: 32ex;
   }
 
-.btn_1 {
+  .btu img {
 	display: block;
-	width: 86%;
-	max-width: 440px;
-	padding: 16px;
-	box-sizing: border-box;
-	text-align: center;
-	margin: 32px auto;
-	text-decoration: none;
-	color: #FFF;
-	font-weight: bold;
-	background: linear-gradient(to right, #57938F, #3CC1B9);
-	border-radius: 32px;
-}
+	width: 10px;
+	height: 24px;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 16px;
+	transition: all .25s;
+  }
+
+  .btu:hover img {
+	right: -16px;
+	opacity: 0;
+  }
